# 02-observability-ml-alerting

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
app/anomaly_detection/: Dockerfile  alerting.py  detector.py  models.py  prometheus_client.py  requirements.txt
app/anomaly_detection/detection/: isolation_forest.py
app/anomaly_detection/services/: anomaly_service.py
app/exporter/: metrics_exporter.py
app/pipeline/: predict.py
app/serving/: Dockerfile  app.py  requirements.txt
docs/api/: endpoints.md
docs/dev/: contributing.md
docs/guides/: ci-cd-pipeline.md  configuration.md  troubleshooting.md
docs/observability/: grafana-setup.md  metrics-reference.md
docs/runbooks/: alerts-rules.md
infra/: filebeat.yml
infra/docker/mlflow/: Dockerfile
infra/kubernetes/deployments/: exporter-deployment.yaml  inference-deployment.yaml  mlflow-deployment.yaml
infra/kubernetes/jobs/: training-job.yaml
monitoring/prometheus/: alert_rules.yml  prometheus.yml
scripts/data/: generate_data.py
scripts/deployment/: deploy-k8s.sh  deploy-local.sh
test-results/: unit.xml
tests/: conftest.py
tests/integration/: test_pipeline.py
tests/unit/: test_drift_detector.py  test_predict.py  test_training.py
