# =============================================================================
# pyproject.toml
# 02-observability-ml-alerting — Enterprise MLOps Observability Platform
# =============================================================================

[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name        = "observability-ml-alerting"
version     = "1.0.0"
description = "Enterprise MLOps observability platform: model drift detection, prediction confidence monitoring, and ML pipeline observability"
readme      = "README.md"
requires-python = ">=3.12"

# Kept in lockstep with requirements.txt — this file previously pinned an
# older, divergent set of versions (fastapi 0.115 vs 0.136, mlflow 2.16 vs
# 3.13, etc). `pip install -r requirements.txt` and `pip install -e .` must
# resolve to the same versions, or local dev / CI / packaging can silently
# diverge.
dependencies = [
    "fastapi==0.136.3",
    "uvicorn[standard]==0.48.0",
    "pydantic==2.13.4",
    "scikit-learn==1.8.0",
    "numpy==2.4.6",
    "pandas==2.3.3",
    "scipy==1.17.1",
    "mlflow==3.13.0",
    "prometheus_client==0.25.0",
    "python-dotenv==1.2.2",
    "requests==2.34.2",
]

[project.optional-dependencies]
test = [
    "pytest==9.0.3",
    "anyio==4.13.0",
]
dev = [
    "pytest==9.0.3",
    "anyio==4.13.0",
    "ruff==0.6.9",
    "mypy==1.11.2",
]

[project.scripts]
generate-data   = "scripts.data.generate_data:main"
train-model     = "app.pipeline.train:main"
drift-report    = "app.pipeline.drift_detector:main"
inject-drift    = "tests.chaos.inject_drift:main"

[tool.pytest.ini_options]
testpaths    = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts      = "-v --tb=short"
filterwarnings = [
    "ignore::FutureWarning:mlflow.*",
    "ignore::DeprecationWarning:mlflow.*",
    "ignore::DeprecationWarning:codecs.*",
]

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
